--- a/swish.cabal
+++ b/swish.cabal
@@ -46,14 +46,16 @@ Description:
   .
   Changes:
   .
-  [Version 0.6.2.0] Updated @Swish.RDF.Vocabulary@ and @Swish.RDF.RDFGraph@ to
-  include more common RDF terms. Added @Swish.RDF.Vocabulary.DublinCore@,
-  @Swish.RDF.Vocabulary.FOAF@, and @Swish.RDF.Vocabulary.Geo@ modules,
-  @Swish.RDF.Vocabulary.OWL@, @Swish.RDF.Vocabulary.RDF@, and 
-  @Swish.RDF.Vocabulary.XSD@ modules (re-exported from @Swish.RDF.Vocabulary@
+  [Version 0.6.2.0] Updated "Swish.RDF.Vocabulary" and "Swish.RDF.RDFGraph" to
+  include more common RDF terms. Added "Swish.RDF.Vocabulary.DublinCore",
+  "Swish.RDF.Vocabulary.FOAF", and "Swish.RDF.Vocabulary.Geo" modules,
+  "Swish.RDF.Vocabulary.OWL", "Swish.RDF.Vocabulary.RDF", and 
+  "Swish.RDF.Vocabulary.XSD" modules (re-exported from "Swish.RDF.Vocabulary"
   as necessary). The test suite has been updated to take advantage of the
   support in recent Cabal versions which means that the @tests@ flag has been
-  removed and the minimum Cabal version increased to @1.9.2@.
+  removed and the minimum Cabal version increased to @1.9.2@. A change was
+  made to the internal labelling of the RDFS container-property axioms in
+  "Swish.RDF.RDFProofContext".
   .
   [Version 0.6.1.2] Corrected minimum mtl constraint from 1 to 2 and updated
   the maximum time version to 1.4 from 1.3.
@@ -64,14 +66,14 @@ Description:
   provided in version 0.3.2.1).
   .
   [Version 0.6.1.0] Added support for Turtle format (added the
-  Swish.RDF.TurtleFormatter and Swish.RDF.TurtleParser modules).
+  "Swish.RDF.TurtleFormatter" and "Swish.RDF.TurtleParser" modules).
   .
   [Version 0.6.0.2] Minor internal changes.
   .
-  [Version 0.6.0.1] Moved to using hashing routine using the Data.Hashable
-  interface rather than Swish.Utils.MiscHelpers which is deprecated.
+  [Version 0.6.0.1] Moved to using hashing routine using the @Data.Hashable@
+  interface rather than "Swish.Utils.MiscHelpers", which is deprecated.
   .
-  [Version 0.6.0.0] Add Data.Interned.URI and use it to speed up the QName
+  [Version 0.6.0.0] Add "Data.Interned.URI" and use it to speed up the 'QName'
   equality check.
   .
   [Version 0.5.0.3] Didn't get all the required @FlexibleInstances@.
