--- a/swish.cabal
+++ b/swish.cabal
@@ -1,5 +1,5 @@
 Name:               swish
-Version:            0.6.3.0
+Version:            0.6.3.1
 Stability:          experimental
 License:            LGPL
 License-file:       LICENSE 
@@ -45,6 +45,8 @@ Description:
   * Complete, ready-to-run, command-line and script-driven programs.
   .
   Changes:
+  .
+  [Version 0.6.3.1] Added support for xsd:decimal.
   .
   [Version 0.6.3.0] Added "Swish.RDF.Vocabulary.SIOC".
   .
@@ -709,4 +711,3 @@ Executable         Swish
       filepath >= 1.1 && < 1.3,
       hashable == 1.1.*,
       intern == 0.8.*
-
