--- a/swish.cabal
+++ b/swish.cabal
@@ -1,5 +1,5 @@
 Name:               swish
-Version:            0.6.5.1
+Version:            0.6.5.2
 Stability:          experimental
 License:            LGPL
 License-file:       LICENSE 
@@ -45,6 +45,9 @@ Description:
   * Complete, ready-to-run, command-line and script-driven programs.
   .
   Changes:
+  .
+  [Version 0.6.5.2] Update cabal to allow @polyparse@ version @1.8@
+  and hopefully build with ghc 7.4.
   .
   [Version 0.6.5.1] Haddock fixes for @0.6.5.0@.
   .
@@ -210,7 +213,7 @@ Library
       mtl >= 2 && < 3,
       network >= 2.2 && < 2.4,
       old-locale == 1.0.*, 
-      polyparse >= 1.6 && < 1.8,
+      polyparse >= 1.6 && < 1.9,
       text == 0.11.*,
       time >= 1.1 && < 1.5
 
@@ -310,7 +313,7 @@ Test-Suite test-builtinmap
       intern == 0.8.*,
       directory >= 1.0 && < 1.2,
       mtl >= 2 && < 3,
-      polyparse >= 1.6 && < 1.8,
+      polyparse >= 1.6 && < 1.9,
       time >= 1.1 && < 1.5
 
 Test-Suite test-graphpartition
@@ -384,7 +387,7 @@ Test-Suite test-nt
       directory >= 1.0 && < 1.2,
       old-locale == 1.0.*,
       time >= 1.1 && < 1.5,
-      polyparse >= 1.6 && < 1.8
+      polyparse >= 1.6 && < 1.9
 
 Test-Suite test-n3parser
    type:       exitcode-stdio-1.0
@@ -413,7 +416,7 @@ Test-Suite test-n3parser
       directory >= 1.0 && < 1.2,
       old-locale == 1.0.*,
       time >= 1.1 && < 1.5,
-      polyparse >= 1.6 && < 1.8
+      polyparse >= 1.6 && < 1.9
 
 Test-Suite test-n3formatter
    type:       exitcode-stdio-1.0
@@ -442,7 +445,7 @@ Test-Suite test-n3formatter
       directory >= 1.0 && < 1.2,
       old-locale == 1.0.*,
       time >= 1.1 && < 1.5,
-      polyparse >= 1.6 && < 1.8
+      polyparse >= 1.6 && < 1.9
 
 Test-Suite test-rdfdatatypexsdinteger
    type:       exitcode-stdio-1.0
@@ -471,7 +474,7 @@ Test-Suite test-rdfdatatypexsdinteger
       directory >= 1.0 && < 1.2,
       old-locale == 1.0.*,
       time >= 1.1 && < 1.5,
-      polyparse >= 1.6 && < 1.8
+      polyparse >= 1.6 && < 1.9
 
 Test-Suite test-rdfgraph
    type:       exitcode-stdio-1.0
@@ -528,7 +531,7 @@ Test-Suite test-rdfproofcontext
       intern == 0.8.*,
       directory >= 1.0 && < 1.2,
       old-locale == 1.0.*,
-      polyparse >= 1.6 && < 1.8
+      polyparse >= 1.6 && < 1.9
 
 Test-Suite test-rdfproof
    type:       exitcode-stdio-1.0
@@ -557,7 +560,7 @@ Test-Suite test-rdfproof
       intern == 0.8.*,
       directory >= 1.0 && < 1.2,
       old-locale == 1.0.*,
-      polyparse >= 1.6 && < 1.8
+      polyparse >= 1.6 && < 1.9
 
 Test-Suite test-rdfquery
    type:       exitcode-stdio-1.0
@@ -586,7 +589,7 @@ Test-Suite test-rdfquery
       intern == 0.8.*,
       directory >= 1.0 && < 1.2,
       old-locale == 1.0.*,
-      polyparse >= 1.6 && < 1.8
+      polyparse >= 1.6 && < 1.9
 
 Test-Suite test-rdfruleset
    type:       exitcode-stdio-1.0
@@ -615,7 +618,7 @@ Test-Suite test-rdfruleset
       intern == 0.8.*,
       directory >= 1.0 && < 1.2,
       old-locale == 1.0.*,
-      polyparse >= 1.6 && < 1.8
+      polyparse >= 1.6 && < 1.9
 
 Test-Suite test-varbinding
    type:       exitcode-stdio-1.0
@@ -714,6 +717,6 @@ Executable         Swish
       mtl >= 2 && < 3,
       network >= 2.2 && < 2.4,
       old-locale == 1.0.*, 
-      polyparse >= 1.6 && < 1.8,
+      polyparse >= 1.6 && < 1.9,
       text == 0.11.*,
       time >= 1.1 && < 1.5
