--- a/swish.cabal
+++ b/swish.cabal
@@ -209,7 +209,7 @@ Library
       directory >= 1.0 && < 1.2,
       filepath >= 1.1 && < 1.4,
       hashable == 1.1.*,
-      intern == 0.8.*,
+      intern == 0.8,
       mtl >= 2 && < 3,
       network >= 2.2 && < 2.4,
       old-locale == 1.0.*, 
@@ -289,7 +289,7 @@ Library
 
 Test-Suite test-builtinmap
    type:       exitcode-stdio-1.0
-   Hs-Source-Dirs: tests/ src/
+   Hs-Source-Dirs: tests/
    Main-Is:    BuiltInMapTest.hs
    Other-Modules:  TestHelpers
 
@@ -304,21 +304,13 @@ Test-Suite test-builtinmap
       -Wall -fno-warn-orphans
 
    Build-Depends:
-      HUnit == 1.2.*,
       base >=3 && < 5,
-      text == 0.11.*,
-      old-locale == 1.0.*, 
-      network >= 2.2 && < 2.4,
-      hashable == 1.1.*,
-      intern == 0.8.*,
-      directory >= 1.0 && < 1.2,
-      mtl >= 2 && < 3,
-      polyparse >= 1.6 && < 1.9,
-      time >= 1.1 && < 1.5
+      HUnit == 1.2.*,
+      swish
 
 Test-Suite test-graphpartition
    type:       exitcode-stdio-1.0
-   Hs-Source-Dirs: tests/ src/
+   Hs-Source-Dirs: tests/
    Main-Is:        GraphPartitionTest.hs
    Other-Modules:  TestHelpers
 
@@ -333,14 +325,13 @@ Test-Suite test-graphpartition
       -Wall -fno-warn-orphans
 
    Build-Depends:
-      HUnit == 1.2.*,
       base >=3 && < 5,
-      hashable == 1.1.*,
-      mtl >= 2 && < 3
+      HUnit == 1.2.*,
+      swish
 
 Test-Suite test-graph
    type:       exitcode-stdio-1.0
-   Hs-Source-Dirs: tests/ src/
+   Hs-Source-Dirs: tests/
    Main-Is:        GraphTest.hs
    Other-Modules:  TestHelpers
 
@@ -355,14 +346,13 @@ Test-Suite test-graph
       -Wall -fno-warn-orphans
 
    Build-Depends:
-      HUnit == 1.2.*,
       base >=3 && < 5,
-      hashable == 1.1.*,
-      mtl >= 2 && < 3
+      HUnit == 1.2.*,
+      swish
 
 Test-Suite test-nt
    type:       exitcode-stdio-1.0
-   Hs-Source-Dirs: tests/ src/
+   Hs-Source-Dirs: tests/
    Main-Is:        NTTest.hs
    Other-Modules:  TestHelpers
 
@@ -377,21 +367,14 @@ Test-Suite test-nt
       -Wall -fno-warn-orphans
 
    Build-Depends:
-      HUnit == 1.2.*,
       base >=3 && < 5,
-      hashable == 1.1.*,
-      mtl >= 2 && < 3,
-      text == 0.11.*,
-      network >= 2.2 && < 2.4,
-      intern == 0.8.*,
-      directory >= 1.0 && < 1.2,
-      old-locale == 1.0.*,
-      time >= 1.1 && < 1.5,
-      polyparse >= 1.6 && < 1.9
+      HUnit == 1.2.*,
+      swish,
+      text == 0.11.*
 
 Test-Suite test-n3parser
    type:       exitcode-stdio-1.0
-   Hs-Source-Dirs: tests/ src/
+   Hs-Source-Dirs: tests/
    Main-Is:        N3ParserTest.hs
    Other-Modules:  TestHelpers
 
@@ -406,21 +389,15 @@ Test-Suite test-n3parser
       -Wall -fno-warn-orphans
 
    Build-Depends:
-      HUnit == 1.2.*,
       base >=3 && < 5,
-      hashable == 1.1.*,
-      mtl >= 2 && < 3,
-      text == 0.11.*,
+      HUnit == 1.2.*,
       network >= 2.2 && < 2.4,
-      intern == 0.8.*,
-      directory >= 1.0 && < 1.2,
-      old-locale == 1.0.*,
-      time >= 1.1 && < 1.5,
-      polyparse >= 1.6 && < 1.9
+      swish,
+      text == 0.11.*
 
 Test-Suite test-n3formatter
    type:       exitcode-stdio-1.0
-   Hs-Source-Dirs: tests/ src/
+   Hs-Source-Dirs: tests/
    Main-Is:        N3FormatterTest.hs
    Other-Modules:  TestHelpers
 
@@ -435,21 +412,15 @@ Test-Suite test-n3formatter
       -Wall -fno-warn-orphans
 
    Build-Depends:
-      HUnit == 1.2.*,
       base >=3 && < 5,
-      hashable == 1.1.*,
-      mtl >= 2 && < 3,
-      text == 0.11.*,
+      HUnit == 1.2.*,
       network >= 2.2 && < 2.4,
-      intern == 0.8.*,
-      directory >= 1.0 && < 1.2,
-      old-locale == 1.0.*,
-      time >= 1.1 && < 1.5,
-      polyparse >= 1.6 && < 1.9
+      swish,
+      text == 0.11.*
 
 Test-Suite test-rdfdatatypexsdinteger
    type:       exitcode-stdio-1.0
-   Hs-Source-Dirs: tests/ src/
+   Hs-Source-Dirs: tests/
    Main-Is:        RDFDatatypeXsdIntegerTest.hs
    Other-Modules:  TestHelpers
 
@@ -464,21 +435,15 @@ Test-Suite test-rdfdatatypexsdinteger
       -Wall -fno-warn-orphans
 
    Build-Depends:
-      HUnit == 1.2.*,
       base >=3 && < 5,
-      hashable == 1.1.*,
-      mtl >= 2 && < 3,
-      text == 0.11.*,
+      HUnit == 1.2.*,
       network >= 2.2 && < 2.4,
-      intern == 0.8.*,
-      directory >= 1.0 && < 1.2,
-      old-locale == 1.0.*,
-      time >= 1.1 && < 1.5,
-      polyparse >= 1.6 && < 1.9
+      swish,
+      text == 0.11.*
 
 Test-Suite test-rdfgraph
    type:       exitcode-stdio-1.0
-   Hs-Source-Dirs: tests/ src/
+   Hs-Source-Dirs: tests/
    Main-Is:        RDFGraphTest.hs
    Other-Modules:  TestHelpers
 
@@ -493,20 +458,17 @@ Test-Suite test-rdfgraph
       -Wall -fno-warn-orphans
 
    Build-Depends:
-      HUnit == 1.2.*,
       base >=3 && < 5,
-      hashable == 1.1.*,
-      mtl >= 2 && < 3,
-      text == 0.11.*,
+      HUnit == 1.2.*,
       network >= 2.2 && < 2.4,
-      time >= 1.1 && < 1.5,
       old-locale == 1.0.*,
-      intern == 0.8.*,
-      directory >= 1.0 && < 1.2
+      swish,
+      text == 0.11.*,
+      time >= 1.1 && < 1.5
 
 Test-Suite test-rdfproofcontext
    type:       exitcode-stdio-1.0
-   Hs-Source-Dirs: tests/ src/
+   Hs-Source-Dirs: tests/
    Main-Is:        RDFProofContextTest.hs
    Other-Modules:  TestHelpers
 
@@ -521,21 +483,15 @@ Test-Suite test-rdfproofcontext
       -Wall -fno-warn-orphans
 
    Build-Depends:
-      HUnit == 1.2.*,
       base >=3 && < 5,
-      hashable == 1.1.*,
-      mtl >= 2 && < 3,
-      text == 0.11.*,
+      HUnit == 1.2.*,
       network >= 2.2 && < 2.4,
-      time >= 1.1 && < 1.5,
-      intern == 0.8.*,
-      directory >= 1.0 && < 1.2,
-      old-locale == 1.0.*,
-      polyparse >= 1.6 && < 1.9
+      swish,
+      text == 0.11.*
 
 Test-Suite test-rdfproof
    type:       exitcode-stdio-1.0
-   Hs-Source-Dirs: tests/ src/
+   Hs-Source-Dirs: tests/
    Main-Is:        RDFProofTest.hs
    Other-Modules:  TestHelpers
 
@@ -550,21 +506,15 @@ Test-Suite test-rdfproof
       -Wall -fno-warn-orphans
 
    Build-Depends:
-      HUnit == 1.2.*,
       base >=3 && < 5,
-      hashable == 1.1.*,
-      mtl >= 2 && < 3,
-      text == 0.11.*,
+      HUnit == 1.2.*,
       network >= 2.2 && < 2.4,
-      time >= 1.1 && < 1.5,
-      intern == 0.8.*,
-      directory >= 1.0 && < 1.2,
-      old-locale == 1.0.*,
-      polyparse >= 1.6 && < 1.9
+      swish,
+      text == 0.11.*
 
 Test-Suite test-rdfquery
    type:       exitcode-stdio-1.0
-   Hs-Source-Dirs: tests/ src/
+   Hs-Source-Dirs: tests/
    Main-Is:        RDFQueryTest.hs
    Other-Modules:  TestHelpers
 
@@ -579,21 +529,15 @@ Test-Suite test-rdfquery
       -Wall -fno-warn-orphans
 
    Build-Depends:
-      HUnit == 1.2.*,
       base >=3 && < 5,
-      hashable == 1.1.*,
-      mtl >= 2 && < 3,
-      text == 0.11.*,
+      HUnit == 1.2.*,
       network >= 2.2 && < 2.4,
-      time >= 1.1 && < 1.5,
-      intern == 0.8.*,
-      directory >= 1.0 && < 1.2,
-      old-locale == 1.0.*,
-      polyparse >= 1.6 && < 1.9
+      swish,
+      text == 0.11.*
 
 Test-Suite test-rdfruleset
    type:       exitcode-stdio-1.0
-   Hs-Source-Dirs: tests/ src/
+   Hs-Source-Dirs: tests/
    Main-Is:        RDFRulesetTest.hs
    Other-Modules:  TestHelpers
 
@@ -608,21 +552,15 @@ Test-Suite test-rdfruleset
       -Wall -fno-warn-orphans
 
    Build-Depends:
-      HUnit == 1.2.*,
       base >=3 && < 5,
-      hashable == 1.1.*,
-      mtl >= 2 && < 3,
-      text == 0.11.*,
+      HUnit == 1.2.*,
       network >= 2.2 && < 2.4,
-      time >= 1.1 && < 1.5,
-      intern == 0.8.*,
-      directory >= 1.0 && < 1.2,
-      old-locale == 1.0.*,
-      polyparse >= 1.6 && < 1.9
+      swish,
+      text == 0.11.*
 
 Test-Suite test-varbinding
    type:       exitcode-stdio-1.0
-   Hs-Source-Dirs: tests/ src/
+   Hs-Source-Dirs: tests/
    Main-Is:        VarBindingTest.hs
    Other-Modules:  TestHelpers
 
@@ -637,17 +575,13 @@ Test-Suite test-varbinding
       -Wall -fno-warn-orphans
 
    Build-Depends:
-      HUnit == 1.2.*,
       base >=3 && < 5,
-      text == 0.11.*,
-      network >= 2.2 && < 2.4,
-      intern == 0.8.*,
-      hashable == 1.1.*,
-      directory >= 1.0 && < 1.2
+      HUnit == 1.2.*,
+      swish
 
 Test-Suite test-lookupmap
    type:       exitcode-stdio-1.0
-   Hs-Source-Dirs: tests/ src/
+   Hs-Source-Dirs: tests/
    Main-Is:        LookupMapTest.hs
    Other-Modules:  TestHelpers
 
@@ -662,12 +596,13 @@ Test-Suite test-lookupmap
       -Wall -fno-warn-orphans
 
    Build-Depends:
+      base >=3 && < 5,
       HUnit == 1.2.*,
-      base >=3 && < 5
+      swish
 
 Test-Suite test-qname
    type:       exitcode-stdio-1.0
-   Hs-Source-Dirs: tests/ src/
+   Hs-Source-Dirs: tests/
    Main-Is:        QNameTest.hs
    Other-Modules:  TestHelpers
 
@@ -682,13 +617,11 @@ Test-Suite test-qname
       -Wall -fno-warn-orphans
 
    Build-Depends:
-      HUnit == 1.2.*,
       base >=3 && < 5,
-      text == 0.11.*,
+      HUnit == 1.2.*,
       network >= 2.2 && < 2.4,
-      intern == 0.8.*,
-      hashable == 1.1.*,
-      directory >= 1.0 && < 1.2
+      swish,
+      text == 0.11.*
 
  -- we do not have the data files to run this test
  Executable         SwishTest
@@ -696,7 +629,7 @@ Test-Suite test-qname
 
 Executable         Swish
    Main-Is:        SwishApp.hs
-   Hs-Source-Dirs: app/ src/
+   Hs-Source-Dirs: app/ 
    Other-Modules:  Paths_swish
 
    ghc-options:
@@ -708,15 +641,4 @@ Executable         Swish
 
    Build-Depends:
       base >=3 && < 5,
-      binary == 0.5.*,
-      containers >= 0.3 && < 0.5,
-      directory >= 1.0 && < 1.2,
-      filepath >= 1.1 && < 1.4,
-      hashable == 1.1.*,
-      intern == 0.8.*,
-      mtl >= 2 && < 3,
-      network >= 2.2 && < 2.4,
-      old-locale == 1.0.*, 
-      polyparse >= 1.6 && < 1.9,
-      text == 0.11.*,
-      time >= 1.1 && < 1.5
+      swish
